--- a/nlp.html
+++ b/nlp.html
@@ -132,7 +132,7 @@ on various websites and social media platforms that will then be used for?...</p
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... 109 is now hiring a AI Data Scientist/NLP Engineer in Washington DC. Review all 
 of the job details and apply today!</p>
@@ -157,7 +157,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk0jhff/'>
+<h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk0jhff/'>
     Software Developer?Natural Language Processing  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -167,7 +167,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1896220'>Job Application for Research Engineer - AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1896220'>Job Application for Research Engineer - AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Seattle Irvine</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -175,7 +175,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aprecruit.ucr.edu/JPF01177'>Open Rank Professor -  Natural Language Processing and/or Machine Learning  and Computer Architecture (JPF01177) - AP Recruit</a></h5> 
+<h5><a href='https://aprecruit.ucr.edu/JPF01177'>Open Rank Professor -  Natural Language Processing and/or Machine Learning  and Computer Architecture (JPF01177) - AP Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
@@ -224,7 +224,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Worthix/743999693981383-natural-language-processing-specialist'>Worthix Natural Language Processing Specialist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Worthix/743999693981383-natural-language-processing-specialist'>Worthix Natural Language Processing Specialist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA Atlanta</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -321,7 +321,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='https://causaly.workable.com/jobs/1110826'>Jobs: Senior NLP Engineer (Information Extraction ... - Causaly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://causaly.workable.com/jobs/1110826'>Jobs: Senior NLP Engineer (Information Extraction ... - Causaly</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 20, 2019 ... The platform turns free-flow text into causal knowledge graphs and applies 
 machine learning to surface new knowledge. We are a VC-backed tech company
@@ -338,11 +338,11 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
+<h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-08-31</p>
 <hr/>
@@ -408,7 +408,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
@@ -424,7 +424,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Some of the research projects can involve parsing, language modelling, machine 
 translation, sentiment analysis, recommendation systems, deep learning,?...</p>
@@ -435,7 +435,7 @@ translation, sentiment analysis, recommendation systems, deep learning,?...</p>
 GumGum enables highly impactful digital advertising campaigns with contextual
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -488,7 +488,7 @@ India.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rimeto/bdca896f-e7e7-4f27-a894-41b47c729c63'>Rimeto - Software Engineer, Search Ranking & NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rimeto/bdca896f-e7e7-4f27-a894-41b47c729c63'>Rimeto - Software Engineer, Search Ranking & NLP</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Bonus Points. Experience with ElasticSearch, GraphQL, or React. Background in 
 Machine Learning or Statistics. Why you'd love working here. Everyone at?...</p>
@@ -497,7 +497,7 @@ Machine Learning or Statistics. Why you'd love working here. Everyone at?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
-<h5><a href='https://coverahealth.recruitee.com/o/ai-scientist-deep-learning-for-natural-language-processing'>AI Scientist - Deep Learning for Natural Language Processing ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coverahealth.recruitee.com/o/ai-scientist-deep-learning-for-natural-language-processing'>AI Scientist - Deep Learning for Natural Language Processing ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... We are looking for a talented AI Scientist with a focus on Deep Learning and 
 Natural Language Processing to join us in our commitment to improve the quality 
