--- a/data-architect.html
+++ b/data-architect.html
@@ -70,7 +70,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698417374-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi-corse'>
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -197,7 +197,7 @@ dig?...</p>
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bjss/jobs/1556003'>Job Application for Data Architect at BJSS</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bjss/jobs/1556003'>Job Application for Data Architect at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -258,7 +258,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697794369-iam-consultant-architect-remote-job'>Datamatics Global Services Inc IAM Consultant / Architect - Remote job | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697794369-iam-consultant-architect-remote-job'>Datamatics Global Services Inc IAM Consultant / Architect - Remote job | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -324,7 +324,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999697529233-data-governance-and-architect'>lm group Data Governance and Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999697529233-data-governance-and-architect'>lm group Data Governance and Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -434,7 +434,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -474,7 +474,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Boston, MA, USA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://tetrascience.workable.com/jobs/1133176'>TetraScience - Jobs: Life Sciences Data Engineer and Solution Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetrascience.workable.com/jobs/1133176'>TetraScience - Jobs: Life Sciences Data Engineer and Solution Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
